提出所有中文

--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -7,25 +7,38 @@
     "common": {
         "send": "发 送",
         "send2": "发送",
+        "release": "发 布",
+        "releaseTime": "发布时间",
+        "time": "时间",
+        "currency": "币种",
+        "price": "价格",
+        "premium": "溢价率",
         "exitProgram": "再按一次退出程序",
         "invitationSuccess": "分享成功",
         "invitationFail": "分享失败",
         "save": "保 存",
         "scan": "扫一扫",
         "imgTooBig": "图片太大",
+        "fileBigTip": "文件过大，请重新选择",
+        "uploadFailed": "文件上传失败",
+        "uploadSuccess": "上传成功",
         "imgErr": "文件格式错误",
+        "fileErr": "文件格式错误，只支持MP4,MOV,AVI后缀视频文件",
         "compressing": "压缩中",
         "bFlash": "闪光灯",
         "scanPicture": "相  册",
         "cancle": "取 消",
+        "cancle2": "取消",
         "all": "全部",
         "del": "删 除",
         "ok": "确 定",
         "repeat": "重发",
+        "status": "状态",
         "available": "可用",
         "frozen": "冻结",
         "ZHcn": "简体中文",
         "ENus": "英文",
+        "networkErr": "网络错误，刷新后重试",
         "sendSuccess": "发送成功",
         "copySuccessful": "复制成功",
         "copyUnsuccessful": "复制失败",
@@ -96,7 +109,9 @@
         "appealTypeMaliciousOrder"     : "恶意下单",
         "appealTypeFalsePaid"          : "恶意点击已付款",
         "ID": "身份证",
-        "passport": "护照"
+        "passport": "护照",
+        "unrecognized": "无法识别此图片",
+        "collectionFailure": "收款方式获取失败"
     },
     "refresh": {
         "pulling": "下拉即可刷新...",
@@ -106,6 +121,8 @@
     "login": {
         "loginTitle": "登录账号",
         "loginTip": "你将会拥有多链钱包",
+        "registSuccess": "注册成功",
+        "loginFailed": "登录失败",
         "phone": "手机号",
         "registTip": "注册及同意",
         "email": "邮箱",
@@ -136,18 +153,56 @@
         "title2": "多重保障 更加安全",
         "tip2": "私钥多重保护 账户安全无需担心",
         "title3": "欢迎来到Bag Pay",
-        "tip3": "安全放心 方便快捷"
+        "tip3": "安全放心 方便快捷",
+        "skip": "跳过"
     },
     "home": {
         "assets": "资产",
         "paymentTip": "扫描二维码，转入",
         "addSymbol": "添加币种",
+        "serviceCharge": "手续费",
         "paymentTip1": "最小转入金额：0.001{symbol}，小于最小金额的充值将不会上账",
         "paymentTip2": "请勿向上述地址充值任何非{symbol}资产否则资产将不可找回。",
-        "paymentTip3": "充值至上述地址后，需要1个网络节点的确认才能到账。"
+        "paymentTip3": "充值至上述地址后，需要1个网络节点的确认才能到账。",
+        "paymentTip4": "24小时内最高可转{txt}",
+        "paymentTip5": "为保障资金安全，当您账户安全策略变更、密码修改、我们会对提币进行人工审核，请耐心等待工作人员电话或邮件联系。",
+        "paymentTip6": "请务必确认电脑及浏览器安全，防止信息被篡改或泄露。"
     },
     "mine": {
         "safeSetting": "安全设置",
+        "collectionSet": "收款设置",
+        "opinionQuest": "意见问题",
+        "opinion": "意见",
+        "updateV": "版本更新",
+        "forceUpdate": "强制更新",
+        "update": "更新",
+        "updateTip": "检测到新版本， 是否更新",
+        "newestV": "当前已是最新版本",
+        "installFailed": "安装失败",
+        "downloading": "正在下载",
+        "reInput": "重新输入",
+        "payPwdTip1": "设置6位数安全密码，安全码将用于交易， 以及验证修改登录密码",
+        "payPwdTip2": "确认6位数安全密码，安全码将用于交易， 以及验证修改登录密码",
+        "payPwdTip3": "重置6位数安全密码，安全码将用于交易， 以及验证修改登录密码",
+        "notCertified1": "未认证",
+        "underReview": "审核中",
+        "failed": "未通过",
+        "certified": "已认证",
+        "set": "已设置",
+        "notSet": "未设置",
+        "auditSuccess": "审核成功",
+        "auditTip1": "实名认证（LV1）成功，可点击‘下一步’申请实名认证（LV2）",
+        "nextStep": "下一步",
+        "cardNum": "证件号码",
+        "currentLv": "当前认证等级(LV{num})",
+        "lv3Tip": "请录制视频时口述以下内容：",
+        "addSuccess": "添加成功",
+        "addFailed": "添加失败，请稍后重试",
+        "notCertified": "您还未进行LV{num}认证，请先认证",
+        "toAuthenticate": "去认证",
+        "disableFailed": "禁用失败，请稍后重试",
+        "startFailed": "启用失败，请稍后重试",
+        "banksFailed": "银行卡列表获取失败, 请稍后重试",
         "protocol": "用户协议",
         "realName": "实名认证",
         "resetReal": "重新认证",
@@ -173,6 +228,7 @@
         "phone": "手机号",
         "changePwd": "修改登录密码",
         "changePwdTip": "修改登录密码",
+        "refusal": "拒绝理由",
         "verLv1Tip": "请填写本人身份证信息。",
         "verLv2Tip": "请上传本人身份证正反及本人手持身份证照片。",
         "verLv3Tip1": "我是***，证件号是：*************** 我自愿在BagPay注册交易，并确认账号是本人 使用。",
@@ -181,6 +237,7 @@
     "payway": {
         "addpay": "添加收付款方式",
         "name": "姓名",
+        "bankDeposit": "开户行",
         "pName": "请输入账户名",
         "account": "账号",
         "pAccount": "请输入账户账号",
@@ -196,6 +253,75 @@
     },
     "otc": {
         "otcAdv": "发布广告",
+        "totalTurnover": "成交总额",
+        "total": "总额",
+        "min": "最低",
+        "max": "最高",
+        "quota": "限额",
+        "minLimit": "单笔最低限额",
+        "minLimit2": "请输入单笔最低限额",
+        "minLimit3": "单笔最低限额不能大于支付金额",
+        "maxLimit": "单笔最高限额",
+        "maxLimit2": "请输入单笔最高限额",
+        "maxLimit3": "单笔最高限额不能低于最底限额",
+        "orderFailed": "下单失败",
+        "enterNum": "请输入数量或者金额",
+        "enterNum2": "请输入数量",
+        "selectPayWay": "请选择收付款方式",
+        "buyCurrency": "交易币种",
+        "orderType": "订单类型",
+        "unitPrice": "单价",
+        "num": "数量",
+        "bus": "商家",
+        "deal": "成交",
+        "turnover": "成交额",
+        "release": "释放",
+        "seeDetails": "查看TA详细",
+        "orderNum": "订单编号",
+        "orderTime": "订单时间",
+        "payNum": "付款参考号",
+        "appeal": "申诉",
+        "appealing": "申诉中",
+        "cancelAppeal": "取消申诉",
+        "appealTime": "申诉时间",
+        "opinions": "处理意见",
+        "markPaid": "标记已支付",
+        "mode": "方式",
+        "shelfAdv": "确认下架广告",
+        "contactAppealing": "此订单在申诉中， 如有疑问请联系客服",
+        "payInfoFailed": "获取支付信息失败，请稍后重试",
+        "orderInfoFailed": "获取订单详情失败",
+        "cancelPay": "确认取消交易",
+        "noCancelPay": "如果您已经向卖家付款， 请不要取消交易",
+        "cancelRule": "取消规则： 买家24小时累计取消{num}笔交易， 会限制当日买入功能",
+        "cancelSuccess": "取消成功",
+        "releasePay": "确认释放交易",
+        "noReleasePay": "如果您未收到买家付款， 请不要释放交易",
+        "releaseSuccess": "释放成功",
+        "payConfirm": "付款确认",
+        "confirmPay": "请确认您已向卖家付款",
+        "maliciousClick": "恶意点击将直接冻结账户",
+        "confirmSuccess": "确认成功",
+        "confirmAppeal": "确认取消申诉",
+        "noConfirmAppeal": "确认取消本次申诉",
+        "cancelAppealSuccess": "取消申诉成功",
+        "appealSuccess": "申诉成功",
+        "payPwd": "请先绑定支付密码",
+        "bind": "去绑定",
+        "noPayWay": "暂无支持的收付款方式",
+        "noBusiness": "您还不是广告商家，请先去申请认证",
+        "uploadPhoto": "请上传照片凭证",
+        "uploadPhoto2": "上传图片凭证",
+        "appealReason": "请输入申诉原因",
+        "appealReason2": "申诉原因",
+        "appealType": "申诉类型",
+        "orderAppeal": "订单申诉",
+        "referencePrice": "市场参考价：",
+        "advTip1": "认证广告商家发布广告将没有累计限制",
+        "advTip2": "发布广告暂仅支持固定价格，数字货币价格浮动，请随时调整",
+        "advTip3": "广告若产生场外交易请及时处理",
+        "enterPrice": "请输入价格",
+        "enterPrice2": "请输入大于{num}的价格",
         "protocol": "广告发布方协议",
         "manage": "广告管理",
         "order": "场外订单",
@@ -226,7 +352,17 @@
         "advTitle5": "身份认证",
         "advTitle6": "提交资料",
         "advTitle7": "缴纳保证金",
-        "advTitle8": "成为商家"
+        "advTitle8": "成为商家",
+        "busStatus1": "审核已提交，等待客服处理",
+        "busStatus2": "您已认证广告商家",
+        "busStatus3": "审核未通过",
+        "busStatus4": "您已认证成功",
+        "busTip1": "请先完成实名认证V3级",
+        "busTip2": "请保证账户余额大于5000（U)作为申请成为商家的保证金，在解除商家后保证金会自动退回",
+        "busTip3": "保证提交资料的合法行，仔细阅读商家条款。",
+        "confirmApply": "确认申请",
+        "needPay": "需缴纳{text}保证金，保证金将从资金余额 扣除，请保证资金余额充足",
+        "checkAgree": "请勾选广告发布方协议"
     },
     "payment": {
         "paymentTitle": "收款",
@@ -237,6 +373,8 @@
         "choiceAddress": "选择币种",
         "changeCoin": "切换币种",
         "remark": "备注",
+        "defaultRemark": "商家很懒，什么都没写",
+        "remarkTip": "备注信息（非必填）",
         "transferIn": "转入",
         "transferOut": "转出",
         "paymentTip": "扫描二维码，转入",
