feat: 广告商家详情

--- a/src/assets/lang/en-us.json
+++ b/src/assets/lang/en-us.json
@@ -260,6 +260,9 @@
         "payment": "Payment method",
         "business": "Advertising business",
         "vfyBus": "Certified merchant",
+        "vfyBused": "Certified merchants",
+        "adoff": "Off",
+        "vfytime": "Authentication Time",
         "applyInfo": "Application information",
         "tradeType": "Transaction Type",
         "normal": "Ordinary",
