--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -289,6 +289,10 @@
         "markPaid": "标记已支付",
         "mode": "方式",
         "shelfAdv": "确认下架广告",
+        "vfytime": "商家认证时间",
+        "cumulative": "累计发布广告",
+        "tradeOrderNum": "成交单量",
+        "tradeOrderRate": "成交率",
         "contactAppealing": "此订单在申诉中， 如有疑问请联系客服",
         "payInfoFailed": "获取支付信息失败，请稍后重试",
         "orderInfoFailed": "获取订单详情失败",
@@ -329,6 +333,8 @@
         "payment": "收款方式",
         "business": "广告商家",
         "vfyBus": "认证商家",
+        "vfyBused": "已认证商家",
+        "adoff": "下架",
         "applyInfo": "申请资料",
         "tradeType": "交易类型",
         "normal": "普通",
