--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -328,6 +328,9 @@
         "payment": "收款方式",
         "business": "廣告商家",
         "vfyBus": "認證商家",
+        "vfyBused": "已認證商家",
+        "adoff": "下架",
+        "vfytime": "認證時間",
         "applyInfo": "申請資料",
         "tradeType": "交易類型",
         "normal": "普通",
