--- a/src/assets/lang/en-us.json
+++ b/src/assets/lang/en-us.json
@@ -73,7 +73,7 @@
         "alipay": "Alipay",
         "weixin": "WeChat",
         "selectPayType": "Select Payment Method",
-        "bank": "Bank card",
+        "bank": "ABA",
         "huione": "Huiwang",
         "stateWait"      : "Waiting",
         "stateFinished"  : "Completed",
@@ -222,6 +222,14 @@
         "underReview": "Under review",
         "failed": "Did not pass",
         "certified": "verifiederified",
+        "videoDetail": "Video Details",
+        "loginTutorial": "Register and Login Tutorial",
+        "howToRegister": "How to log in and register",
+        "howToRecharge": "How to recharge/withdraw cash",
+        "transferAssets": "Asset transfer in and out",
+        "otc": "OTC over-the-counter trading",
+        "otcTrading": "Over-the-counter trading process",
+        "help": "Help Center",
         "set": "Has been set",
         "notSet": "Not set",
         "auditSuccess": "Successful review",
@@ -369,7 +377,7 @@
         "busStatus3": "The audit failed",
         "busStatus4": "You have successfully authenticated",
         "busTip1": "Please complete the real-name authentication V3 level first",
-        "busTip2": "Please ensure that the account balance is greater than 5000 (U) as a deposit for applying to become a merchant. The deposit will be automatically returned after the merchant is terminated",
+        "busTip2": "Please ensure that the account balance is greater than _amount (_coin) as a deposit for applying to become a merchant. The deposit will be automatically returned after the merchant is terminated",
         "busTip3": "Guarantee the legality of the submitted information, read the merchant terms carefully.",
         "confirmApply": "Confirm Application",
         "needPay": "{text} deposit is required, and the deposit will be deducted from the fund balance. Please ensure that the fund balance is sufficient",
