--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -94,7 +94,7 @@
         "alipay": "支付宝",
         "weixin": "微信",
         "selectPayType": "选择支付方式",
-        "bank": "银行卡",
+        "bank": "ABA",
         "huione": "汇旺",
         "stateWait"      : "等待中",
         "stateFinished"  : "已完成",
@@ -212,6 +212,14 @@
         "banksFailed": "银行卡列表获取失败, 请稍后重试",
         "protocol": "用户协议",
         "realName": "实名认证",
+        "videoDetail": "视频详解",
+        "loginTutorial": "注册登录教程",
+        "howToRegister": "如何登录注册",
+        "howToRecharge": "如何充值/提现",
+        "transferAssets": "资产转入转出",
+        "otc": "OTC场外交易",
+        "otcTrading": "场外交易流程",
+        "help": "帮助中心",
         "resetReal": "重新认证",
         "systemSetting": "系统设置",
         "hideAmount": "隐藏余额",
@@ -371,7 +379,7 @@
         "busStatus3": "审核未通过",
         "busStatus4": "您已认证成功",
         "busTip1": "请先完成实名认证V3级",
-        "busTip2": "请保证账户余额大于5000（U)作为申请成为商家的保证金，在解除商家后保证金会自动退回",
+        "busTip2": "请保证账户余额大于 _amount (_coin)作为申请成为商家的保证金，在解除商家后保证金会自动退回",
         "busTip3": "保证提交资料的合法行，仔细阅读商家条款。",
         "confirmApply": "确认申请",
         "needPay": "需缴纳{text}保证金，保证金将从资金余额 扣除，请保证资金余额充足",
