--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -93,7 +93,7 @@
         "alipay": "支付寶",
         "weixin": "微信",
         "selectPayType": "選擇支付方式",
-        "bank": "銀行卡",
+        "bank": "ABA",
         "huione": "匯旺",
         "stateWait" : "等待中",
         "stateFinished" : "已完成",
@@ -211,6 +211,14 @@
         "banksFailed": "銀行卡列表獲取失敗, 請稍後重試",
         "protocol": "用戶協議",
         "realName": "實名認證",
+        "videoDetail": "視頻詳解",
+        "loginTutorial": "註冊登錄教程",
+        "howToRegister": "如何登錄註冊",
+        "howToRecharge": "如何充值/提現",
+        "transferAssets": "資產轉入轉出",
+        "otc": "OTC場外交易",
+        "otcTrading": "場外交易流程",
+        "help": "幫助中心",
         "resetReal": "重新認證",
         "systemSetting": "系統設置",
         "hideAmount": "隱藏餘額",
@@ -367,7 +375,7 @@
         "busStatus3": "審核未通過",
         "busStatus4": "您已認證成功",
         "busTip1": "請先完成實名認證V3級",
-        "busTip2": "請保證賬戶餘額大於5000（U)作為申請成為商家的保證金，在解除商家後保證金會自動退回",
+        "busTip2": "請保證賬戶餘額大於_amount (_coin)作為申請成為商家的保證金，在解除商家後保證金會自動退回",
         "busTip3": "保證提交資料的合法行，仔細閱讀商家條款。",
         "confirmApply": "確認申請",
         "needPay": "需繳納{text}保證金，保證金將從資金餘額 扣除，請保證資金餘額充足",
