feat： 全局检测更新

--- a/src/assets/lang/en-us.json
+++ b/src/assets/lang/en-us.json
@@ -211,6 +211,9 @@
         "forceUpdate": "Mandatory update",
         "update": "Update",
         "updateTip": "New version detected, update",
+        "downloaded": "Download complete",
+        "clickInstall": "Click to install",
+        "updateTip1": "A new version is detected and a mandatory update is required",
         "newestV": "Currently the latest version",
         "installFailed": "Installation failed",
         "downloading": "Downloading",
