--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -183,6 +183,9 @@
         "forceUpdate": "強制更新",
         "update": "更新",
         "updateTip": "檢測到新版本， 是否更新",
+        "downloaded": "下載完成",
+        "clickInstall": "點擊安裝",
+        "updateTip1": "檢測到新版本， 需要強制更新",
         "newestV": "當前已是最新版本",
         "installFailed": "安裝失敗",
         "downloading": "正在下載",
