--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -184,6 +184,9 @@
         "forceUpdate": "强制更新",
         "update": "更新",
         "updateTip": "检测到新版本， 是否更新",
+        "downloaded": "下载完成",
+        "clickInstall": "点击安装",
+        "updateTip1": "检测到新版本， 需要强制更新",
         "newestV": "当前已是最新版本",
         "installFailed": "安装失败",
         "downloading": "正在下载",
