--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -57,6 +57,7 @@
         "webErQua": "网络问题",
         "screen": "筛选",
         "poptip": "温馨提示",
+        "isdev": "功能正在开发中，敬请期待",
         "loginExpired": "您登陆已过期，请重新登录",
         "waitSend": "等待发送",
         "waitReview": "等待审核",
@@ -103,6 +104,7 @@
         "stateClosed"    : "已关闭",
         "statePlatClosed": "平台强制关闭",
         "wechat": "微信",
+        "optional": "选填",
         "telegram": "telegram",
         "friend": "朋友",
         "relatives": "亲人",
@@ -137,6 +139,7 @@
         "findAccountTip": "找回账号登录密码",
         "vCode": "验证码",
         "imgCode": "图形码",
+        "invite_code": "邀请码",
         "againEnter": "再次确认密码",
         "payPassword": "安全密码",
         "userProtocol": "用户协议",
