feat: 登录跳转逻辑

--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -54,6 +54,7 @@
         "name": "名称",
         "noMore": "暂无更多",
         "noData": "暂无数据",
+        "loginToSee": "登录后查看",
         "webErQua": "网络问题",
         "screen": "筛选",
         "poptip": "温馨提示",
