--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -16,6 +16,8 @@
         "exitProgram": "再按一次退出程序",
         "invitationSuccess": "分享成功",
         "invitationFail": "分享失败",
+        "saveSuccess": "保存成功",
+        "saveFail": "保存失败",
         "share": "分享",
         "save": "保 存",
         "scan": "扫一扫",
