--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -14,8 +14,13 @@
         "price": "价格",
         "premium": "溢价率",
         "fee": "手续费",
+        "clickToLogin": "点击登录",
+        "placeFee": "下单手续费",
+        "placeolderFee": "注：请注意账户余额够扣除发布手续费",
         "article": "文章",
         "notice": "公告",
+        "noNotice": "暂无公告",
+        "lookMore": "查看更多",
         "exitProgram": "再按一次退出程序",
         "invitationSuccess": "分享成功",
         "invitationFail": "分享失败",
@@ -169,6 +174,7 @@
     },
     "home": {
         "assets": "资产",
+        "loginForAssets": "登录后查看资金余额",
         "withdraw_frozen": "转出冻结",
         "withdraw_frozen_tip": "提现转出冻结资金",
         "sys_frozen": "系统冻结",
@@ -427,13 +433,24 @@
     },
     "invitation": {
         "commonInvit": "普通邀请",
+        "allProfit": "总收益",
+        "invitToalP": "邀请总人数",
+        "invitPeople": "邀请人数",
         "partnerInvit": "合伙人邀请",
+        "dPush": "直推",
+        "level": "级",
         "link": "邀请链接",
         "poster": "邀请海报",
+        "teamDetail": "团队详细",
+        "commDetail": "返佣明细",
+        "commRuleInstru": "返佣规则说明",
         "commTypeTeam": "团队返佣",
         "commTypeFirst": "一级返佣",
         "commTypeSecond": "二级返佣",
-        "commTypeThress": "三级返佣"
+        "commTypeThress": "三级返佣",
+        "tip1": "凡邀请好友完成下载并注册后，好友在平台交易过程 中产生的每笔真实交易手续费，将获得相应比例的手续 费返佣。",
+        "tip2": "返佣的形式将按照用户实际交易币种所产生的对应手续费返佣到您的交易账户。",
+        "tip3": "好友交易返佣实时统计，随时可申请提现；返佣额=  直推用户实际产生交易量 * 手续费比例*返佣比例+间推 用户实际产生。"
     },
     "error": {
         "ERR_SERVER_ERROR": "服务器内部错误",
