--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -96,6 +96,28 @@
         "currency": "Currency",
         "price": "Price",
         "premium": "Premium Rate",
+        "fee": "Handling Fee",
+        "clickToLogin": "Click to log in",
+        "placeFee": "Order Handling Fee",
+        "placeolderFee": "Note: Please note that the account balance is sufficient to deduct the posting fee",
+        "article": "Article",
+        "notice": "Notice",
+        "noNotice": "No Notice",
+        "lookMore": "look more",
+        "saveSuccess": "Save successfully",
+        "saveFail": "Save failed",
+        "share": "Share",
+        "loginToSee": "View after login",
+        "isdev": "The function is under development, so stay tuned",
+        "payment": "payment",
+        "tranfer": "Transfer",
+        "financial": "Financial Management",
+        "news": "News",
+        "invita": "Invite",
+        "cost": "Life payment",
+        "allApp": "All Apps",
+        "actualReceipt": "Actual Receipt",
+        "optional": "Optional",
         "exitProgram": "Press again to exit the program",
         "invitationSuccess": "Share success",
         "invitationFail": "Sharing failed",
@@ -128,10 +150,17 @@
         "newPwd": "Please enter a new password",
         "findAccount": "Retrieve password",
         "login": "Login",
+        "findPhone": "Find the phone",
+         "findEmail": "Find Email",
+         "loginEmail": "Mobile login",
+         "loginPhone": "Mailbox Login",
+         "registerPhone": "Phone Registration",
+         "registerEmail": "Email Registration",
         "findAccountTitle": "Recover account",
         "findAccountTip": "Retrieve account login password",
         "vCode": "Verification code",
         "imgCode": "Graphic code",
+        "invite_code": "Invite Code",
         "againEnter": "Confirm password again",
         "payPassword": "Security Code",
         "userProtocol": "User Agreement",
@@ -155,17 +184,19 @@
         "tip2": "Multiple protection of private key, no need to worry about account security",
         "title3": "Welcome to Bag Pay",
         "tip3": "Safe and secure, convenient and fast",
+        "letgo": "Experience Now",
         "skip": "Skip"
     },
     "home": {
         "assets": "Assets",
+        "loginForAssets": "Check the fund balance after logging in",
         "paymentTip": "Scan the QR code and transfer to",
         "withdraw_frozen": "Transfer to Frozen",
-         "withdraw_frozen_tip": "Withdraw and transfer out frozen funds",
-         "sys_frozen": "System Frozen",
-         "sys_frozen_tip": "OTC application for merchant deposit",
-         "otc_frozen": "Freeze off-site",
-         "otc_frozen_tip": "OTC off-market order",
+        "withdraw_frozen_tip": "Withdraw and transfer out frozen funds",
+        "sys_frozen": "System Frozen",
+        "sys_frozen_tip": "OTC application for merchant deposit",
+        "otc_frozen": "Freeze off-site",
+        "otc_frozen_tip": "OTC off-market order",
         "addSymbol": "Add currency",
         "paymentTip1": "Minimum transfer amount: 0.001{symbol}, deposits less than the minimum amount will not be posted",
         "paymentTip2": "Please do not deposit any assets other than {symbol} to the above address, otherwise the assets will not be retrieved.",
@@ -176,6 +207,7 @@
         "paymentTip6": "Please make sure that the computer and browser are safe to prevent information from being tampered with or leaked."
     },
     "mine": {
+        "contact": "Contact Customer Service",
         "safeSetting": "Security Settings",
         "realName": "Verified",
         "resetReal": "Recertification",
@@ -232,7 +264,7 @@
         "transferAssets": "Asset transfer in and out",
         "otc": "OTC over-the-counter trading",
         "otcTrading": "Over-the-counter trading process",
-        "help": "Help Center",
+        "help": "Help Tutorials",
         "set": "Has been set",
         "notSet": "Not set",
         "auditSuccess": "Successful review",
@@ -250,6 +282,7 @@
         "banksFailed": "Failed to get the bank card list, please try again later",
         "protocol": "User Agreement",
         "phone": "Phone number",
+        "email": "Email",
         "refusal": "Reason for rejection"
     },
     "payway": {
@@ -270,32 +303,9 @@
         "bankDeposit": "Account Bank"
     },
     "otc": {
-        "otcAdv": "Place an ad",
-        "protocol": "Advertiser Agreement",
-        "manage": "Advertising management",
-        "order": "Off-site order",
-        "payment": "Payment method",
-        "business": "Advertising business",
-        "vfyBus": "Certified merchant",
-        "vfyBused": "Certified merchants",
-        "adoff": "Off",
-        "vfytime": "Authentication Time",
-        "applyInfo": "Application information",
-        "tradeType": "Transaction Type",
-        "normal": "Ordinary",
-        "large": "Large",
-        "socialType": "Social account type",
-        "socialAccount": "Social account",
-        "iceName": "Emergency contact name",
-        "icePhone": "Emergency contact phone",
-        "deposit": "Deposit",
-        "floatingPrice": "Floating price",
-        "fixedPrice": "Fixed price",
-        "remark": "Remark",
-        "maxTrade": "Max Trade ",
-        "minAmount": "Single item minimum ",
-        "payAmount": "Payment Amount",
-        "totalTurnover": "total turnover",
+        "otcAdv": "Post an ad",
+        "otcAdvFee": "Advertising fee",
+        "totalTurnover": "Total Turnover",
         "total": "Total",
         "min": "Min",
         "max": "Max",
@@ -314,6 +324,10 @@
         "orderType": "Order Type",
         "unitPrice": "Unit Price",
         "num": "Number",
+        "remark": "Remark",
+        "maxTrade": "Max Trade",
+        "minAmount": "Single item minimum",
+        "payAmount": "Payment Amount",
         "bus": "Business",
         "deal": "Deal",
         "turnover": "Turnover",
@@ -330,6 +344,10 @@
         "markPaid": "MarkPaid",
         "mode": "Mode",
         "shelfAdv": "Confirm to remove ads from shelves",
+        "vfytime": "Business certification time",
+        "cumulative": "cumulative advertising",
+        "tradeOrderNum": "Trade Order Volume",
+        "tradeOrderRate": "Transaction Rate",
         "contactAppealing": "This order is under appeal. If you have any questions, please contact customer service",
         "payInfoFailed": "Failed to obtain payment information, please try again later",
         "orderInfoFailed": "Failed to obtain order details",
@@ -361,9 +379,28 @@
         "referencePrice": "Market Reference Price:",
         "advTip1": "Certified advertisers will have no cumulative limit for advertising advertisements",
         "advTip2": "Advertising only supports fixed prices for the time being, digital currency prices fluctuate, please adjust at any time",
-        "advTip3": "If an advertisement generates an over-the-counter transaction, please deal with it in time",
+        "advTip3": "If an advertisement generates an over-the-counter transaction, please handle it in time",
         "enterPrice": "Please enter the price",
-        "enterPrice2": "Please enter a price greater than {num}"
+        "enterPrice2": "Please enter a price greater than {num}",
+        "protocol": "Advertisement Publisher Agreement",
+        "manage": "Advertising Management",
+        "order": "Off-site order",
+        "payment": "Payment Method",
+        "business": "Advertising business",
+        "vfyBus": "Verified Merchant",
+        "vfyBused": "Verified Merchant",
+        "adoff": "Remove",
+        "applyInfo": "Application Information",
+        "tradeType": "Trade Type",
+        "normal": "normal",
+        "large": "Large",
+        "socialType": "Social Account Type",
+        "socialAccount": "Social Account",
+        "iceName": "Emergency Contact Name",
+        "icePhone": "Emergency Contact Phone",
+        "deposit": "Pay the deposit",
+        "floatingPrice": "Floating Price",
+        "fixedPrice": "Fixed Price"
     },
     "business": {
         "vfiBusTip1": "In order to ensure the safety of funds, when your account security policy changes, password changes, we will manually review the withdrawal of coins, please wait patiently for the staff to contact you by phone or email.",
@@ -409,6 +446,34 @@
         "selectSymbol": "Choose currency",
         "defaultRemark": "The merchant is lazy and didn't write anything",
         "remarkTip": "Remark information (not required)"
+    },
+    "invitation": {
+        "commonInvit": "Common Invitation",
+        "allProfit": "Total Profit",
+        "invitToalP": "Total number of invites",
+        "invitPeople": "Invited People",
+        "partnerInvit": "Partner Invitation",
+        "dPush": "Direct Push",
+        "levels": "Levels",
+        "level": "level",
+        "2level": "2level",
+        "link": "Invitation Link",
+        "poster": "Invitation Poster",
+        "team": "Team",
+        "teamDetail": "Team Detail",
+        "commDetail": "Commission Details",
+        "commRuleInstru": "Commission Rules Description",
+        "commTypeTeam": "Team Rebate",
+        "commTypeFirst": "First level rebate",
+        "commTypeSecond": "Secondary rebate",
+        "commTypeThress": "Three-level rebate",
+        "tip1": "After inviting a friend to complete the download and registration, each real transaction fee generated by the friend in the platform transaction process will receive a corresponding percentage of the commission rebate.",
+        "tip2": "The form of commission rebate will be rebated to your trading account according to the corresponding handling fee generated by the user's actual trading currency.",
+        "tip3": "Real-time statistics of friend transaction rebates, and you can apply for cash withdrawal at any time; rebate amount = actual transaction volume generated by direct users * commission ratio * rebate ratio + indirect users actually generated."
+    },
+    "news": {
+        "noticeList": "Notice List",
+        "noticeDetail": "Notice Details"
     },
     "error": {
         "ERR_SERVER_ERROR": "Server internal error",
