--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -13,9 +13,20 @@
         "currency": "幣種",
         "price": "價格",
         "premium": "溢價率",
+        "fee": "手续费",
+        "clickToLogin": "點擊登錄",
+        "placeFee": "下單手續費",
+        "placeolderFee": "注：請注意賬戶餘額夠扣除發布手續費",
+        "article": "文章",
+        "notice": "公告",
+        "noNotice": "暫無公告",
+        "lookMore": "查看更多",
         "exitProgram": "再按一次退出程序",
         "invitationSuccess": "分享成功",
         "invitationFail": "分享失敗",
+        "saveSuccess": "保存成功",
+        "saveFail": "保存失敗",
+        "share": "分享",
         "save": "保 存",
         "scan": "掃一掃",
         "imgTooBig": "圖片太大",
@@ -53,9 +64,11 @@
         "name": "名稱",
         "noMore": "暫無更多",
         "noData": "暫無數據",
+        "loginToSee": "登錄後查看",
         "webErQua": "網絡問題",
         "screen": "篩選",
         "poptip": "溫馨提示",
+        "isdev": "功能正在開發中，敬請期待",
         "waitSend": "等待發送",
         "waitReview": "等待審核",
         "abnormal": "異常",
@@ -72,6 +85,14 @@
         "typeNoResponse": "一直不響應",
         "typePaidButNotRelease": "已付款不放幣",
         "typeMaliciousOrder": "惡意下單",
+        "payment": "付款",
+        "tranfer": "轉賬",
+        "financial": "理財",
+        "news": "資訊",
+        "invita": "邀請",
+        "cost": "生活繳費",
+        "allApp": "全部應用",
+        "actualReceipt": "實際到賬",
         "typeFalsePaid": "惡意點擊已付款",
         "stateNoProcess": "未處理",
         "stateProcessing": "處理中",
@@ -103,6 +124,7 @@
         "wechat": "微信",
         "telegram": "telegram",
         "friend": "朋友",
+        "optional": "選填",
         "relatives": "親人",
         "appealTypeNoResponse" : "一直不響應",
         "appealTypePaidButNotRelease" : "已付款不放幣",
@@ -132,9 +154,16 @@
         "findAccount": "找回密碼",
         "login": "登 錄",
         "findAccountTitle": "找回賬號",
+        "findPhone": "手機找回",
+        "findEmail": "郵箱找回",
+        "loginEmail": "手機登錄",
+        "loginPhone": "郵箱登錄",
+        "registerPhone": "手機註冊",
+        "registerEmail": "郵箱註冊",
         "findAccountTip": "找回賬號登錄密碼",
         "vCode": "驗證碼",
         "imgCode": "圖形碼",
+        "invite_code": "邀請碼",
         "againEnter": "再次確認密碼",
         "payPassword": "安全密碼",
         "userProtocol": "用戶協議",
@@ -154,10 +183,12 @@
         "tip2": "私鑰多重保護 賬戶安全無需擔心",
         "title3": "歡迎來到Bag Pay",
         "tip3": "安全放心 方便快捷",
+        "letgo": "立即體驗",
         "skip": "跳過"
     },
     "home": {
         "assets": "資產",
+        "loginForAssets": "登錄後查看資金餘額",
         "paymentTip": "掃描二維碼，轉入",
         "withdraw_frozen": "轉出凍結",
         "withdraw_frozen_tip": "提現轉出凍結資金",
@@ -175,6 +206,7 @@
         "paymentTip6": "請務必確認電腦及瀏覽器安全，防止信息被篡改或洩露。"
     },
     "mine": {
+        "contact": "聯繫客服",
         "safeSetting": "安全設置",
         "collectionSet": "收款設置",
         "opinionQuest": "意見問題",
@@ -221,7 +253,7 @@
         "transferAssets": "資產轉入轉出",
         "otc": "OTC場外交易",
         "otcTrading": "場外交易流程",
-        "help": "幫助中心",
+        "help": "新手教程",
         "resetReal": "重新認證",
         "systemSetting": "系統設置",
         "hideAmount": "隱藏餘額",
@@ -243,6 +275,7 @@
         "confirmSafePass": "確認安全密碼",
         "forgetSafePass": "忘記安全密碼",
         "phone": "手機號",
+        "email": "邮箱",
         "changePwd": "修改登錄密碼",
         "changePwdTip": "修改登錄密碼",
         "refusal": "拒絕理由",
@@ -270,6 +303,7 @@
     },
     "otc": {
         "otcAdv": "發布廣告",
+        "otcAdvFee": "发布广告手续费",
         "totalTurnover": "成交總額",
         "total": "總額",
         "min": "最低",
@@ -408,6 +442,34 @@
         "setPaymentTitle": "管理錢包",
         "addTitle": "添加地址",
         "selectSymbol": "選擇幣種"
+    },
+    "invitation": {
+        "commonInvit": "普通邀請",
+        "allProfit": "總收益",
+        "invitToalP": "邀請總人數",
+        "invitPeople": "邀請人數",
+        "partnerInvit": "合夥人邀請",
+        "dPush": "直推",
+        "levels": "等級",
+        "level": "級",
+        "2level": "2級",
+        "link": "邀請鏈接",
+        "poster": "邀請海報",
+        "team": "團隊",
+        "teamDetail": "團隊詳細",
+        "commDetail": "返佣明細",
+        "commRuleInstru": "返佣規則說明",
+        "commTypeTeam": "團隊返佣",
+        "commTypeFirst": "一級返佣",
+        "commTypeSecond": "二級返佣",
+        "commTypeThress": "三級返佣",
+        "tip1": "凡邀請好友完成下載並註冊後，好友在平台交易過程 中產生的每筆真實交易手續費，將獲得相應比例的手續 費返佣。",
+        "tip2": "返佣的形式將按照用戶實際交易幣種所產生的對應手續費返佣到您的交易賬戶。",
+        "tip3": "好友交易返佣實時統計，隨時可申請提現；返佣額= 直推用戶實際產生交易量 * 手續費比例*返佣比例+間推 用戶實際產生。"
+    },
+    "news": {
+        "noticeList": "公告列表",
+        "noticeDetail": "公告詳細"
     },
     "error": {
         "ERR_SERVER_ERROR": "服務器內部錯誤",
